--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" />
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/topmenu.css" />
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buttons.css" />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/jquery/jquery-1.4.2.min.js"></script>
 
     {% block extrahead %}{% endblock %}
 </head>
