--- a/templates/shells/base.html
+++ b/templates/shells/base.html
@@ -3,14 +3,12 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="{{shell.description|striptags}}">
-    <title>{% block title %}{% endblock %} &raquo; KDMC Workshops</title>
+    <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{STATIC_URL}}shells/css/reset.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}shells/css/text.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}shells/css/960.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}shells/css/styles.css" />
     <script src="{{STATIC_URL}}js/swfobject.js" type="text/javascript"></script>
-    <link rel="icon" href="{{STATIC_URL}}icons/favicon.png" type="image/png" title="Knight Digital Media Center" />
-
 
     <style type="text/css" media="screen">
         body {
