--- a/templates/shells/shell_page.html
+++ b/templates/shells/shell_page.html
@@ -1,7 +1,4 @@
 {% extends "shells/base.html" %}
-{% load inlines %}
-{# shell inlines are calculated in apps/tutorials/mediaobjects.py #}
-{# media processing template is at templates/inlines/media.html #}
 
 {% block title %}
 {{page.title}}
@@ -21,8 +18,7 @@
         {% endif %}
 
         {% if page %}
-            {% process_inlines page.body as body %}
-            {{body|safe}}
+            {{page.body|safe}}
         {% else %}
             <h3>Sorry, no content is available for this shell.</h3>
         {% endif %}
