--- a/templates/shells/base.html
+++ b/templates/shells/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{STATIC_URL}}shells/css/styles.css" />
     <script src="{{STATIC_URL}}js/swfobject.js" type="text/javascript"></script>
 
+    {# These styles must stay here since they're server-processed (use SASS instead?) #}
     <style type="text/css" media="screen">
         body {
             background-color:#{{palette.bodycolor}};
